--- a/src/components/sbb-timetable/styles/sbb-timetable.component.scss
+++ b/src/components/sbb-timetable/styles/sbb-timetable.component.scss
@@ -11,7 +11,7 @@
   // contain: content;
   display: flex;
   flex-direction: column;
-  margin-block-start: pxToRem(var(--spacing-fixed-1x));
+  margin-block-start: var(--sbb-spacing-fixed-1x);
 }
 
 .timetable > svg,
