--- a/src/global/mixins/mixins_dev_and_debug.scss
+++ b/src/global/mixins/mixins_dev_and_debug.scss
@@ -1,7 +1,7 @@
 // Development, debug and prototyping appearance
 @mixin development-style {
   background-color: rgba(#ad00ff, 0.2);
-  border-width: calc(pxToRem(var(--spacing-fixed-2x)));
+  border-width: var(--sbb-spacing-fixed-2x);
   border-style: dashed solid;
   border-color: rgba(#ad00ff, 1);
   padding: 1em;
