--- a/src/components/sbb-link/styles/sbb-link.component.scss
+++ b/src/components/sbb-link/styles/sbb-link.component.scss
@@ -6,21 +6,21 @@
 :host {
   display: inline-block;
 
-  --text-color-normal: var(--color-granite-default);
-  --text-color-hover-focus: var(--color-red125-default);
-  --text-color-active: var(--color-red150-default);
+  --text-color-normal: var(--sbb-color-granite-default);
+  --text-color-hover-focus: var(--sbb-color-red125-default);
+  --text-color-active: var(--sbb-color-red150-default);
 }
 
 .link--negative {
-  --text-color-normal: var(--color-white-default);
-  --text-color-hover-focus: var(--color-cloud-default);
-  --text-color-active: var(--color-silver-default);
+  --text-color-normal: var(--sbb-color-white-default);
+  --text-color-hover-focus: var(--sbb-color-cloud-default);
+  --text-color-active: var(--sbb-color-silver-default);
 }
 
 .link {
   display: flex;
   align-items: center;
-  gap: pxToRem(var(--spacing-fixed-1x));
+  gap: var(--sbb-spacing-fixed-1x);
   color: var(--text-color-normal);
   text-decoration: none;
   word-break: break-word;
@@ -47,8 +47,8 @@
 }
 
 .link__icon {
-  width: pxToRem(var(--size-icon-ui-small));
-  height: pxToRem(var(--size-icon-ui-small));
+  width: var(--sbb-size-icon-ui-small);
+  height: var(--sbb-size-icon-ui-small);
 }
 
 .link--icon-placement-end .link__icon {
