--- a/src/components/sbb-timetable-row/styles/sbb-timetable-row.component.scss
+++ b/src/components/sbb-timetable-row/styles/sbb-timetable-row.component.scss
@@ -7,7 +7,7 @@
   display: block;
 
   --row-min-height: 108;
-  --third-row-min-height: 27;
+  --third-row-min-height: #{pxToRemBuild(27)};
 
   --flex-basis-pillar-columns: 50; // left and right of pearl chain
   --flex-basis-pillar-columns-walking-icon: 85; // if an icon is present, we have to increase the basis
@@ -19,7 +19,7 @@
 }
 
 :host(sbb-timetable-row) {
-  margin-block-end: pxToRem(var(--spacing-fixed-1x));
+  margin-block-end: var(--sbb-spacing-fixed-1x);
 }
 
 .timetable__row {
@@ -32,7 +32,7 @@
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
-  column-gap: pxToRem(var(--spacing-fixed-2x));
+  column-gap: var(--sbb-spacing-fixed-2x);
 
   padding-block-start: var(--card-padding-top);
   padding-inline-end: var(--card-padding-right);
@@ -84,7 +84,7 @@
 .timetable__row > sbb-timetable-duration,
 .timetable__row > sbb-timetable-cus-him {
   align-items: center;
-  min-height: pxToRem(var(--third-row-min-height));
+  min-height: var(--third-row-min-height);
 
   &.visually-empty {
     position: absolute;
