--- a/src/components/sbb-timetable-transportation-walk/styles/sbb-timetable-transportation-walk.component.scss
+++ b/src/components/sbb-timetable-transportation-walk/styles/sbb-timetable-transportation-walk.component.scss
@@ -1,5 +1,5 @@
 :host {
-  --walk-icon-height: 24;
+  --walk-icon-height: #{pxToRemBuild(24)};
   --walk-icon-width: var(--walk-icon-height);
 }
 
@@ -13,11 +13,11 @@
 }
 
 .walk--departure {
-  margin-inline-end: pxToRem(var(--spacing-fixed-2x));
+  margin-inline-end: var(--sbb-spacing-fixed-2x);
 }
 
 .walk--arrival {
-  margin-inline-start: pxToRem(var(--spacing-fixed-2x));
+  margin-inline-start: var(--sbb-spacing-fixed-2x);
 }
 
 .walk__text--visually-hidden {
@@ -25,8 +25,8 @@
 }
 
 .walk__icon {
-  width: pxToRem(10);
-  margin-inline-end: pxToRem(var(--spacing-fixed-1x));
+  width: #{pxToRemBuild(10)};
+  margin-inline-end: var(--sbb-spacing-fixed-1x);
 }
 
 .walk--second-level {
@@ -37,18 +37,18 @@
 .walk--second-level .walk__duration--visual {
   order: -1;
   margin-inline-start: 0;
-  margin-inline-end: pxToRem(var(--spacing-fixed-3x));
+  margin-inline-end: var(--sbb-spacing-fixed-3x);
 }
 
 .walk--second-level .walk__icon {
-  margin-inline-end: pxToRem(var(--spacing-fixed-2x));
+  margin-inline-end: var(--sbb-spacing-fixed-2x);
 }
 
 .walk__icon svg {
   float: left;
-  height: pxToRem(var(--walk-icon-height));
-  width: pxToRem(var(--walk-icon-width));
-  transform: translateX(pxToRem(-7));
+  height: var(--walk-icon-height);
+  width: var(--walk-icon-width);
+  transform: translateX(#{pxToRemBuild(-7)});
 
   @include ifForcedColors {
     fill: CanvasText;
