--- a/src/global/mixins/mixins_buttons.scss
+++ b/src/global/mixins/mixins_buttons.scss
@@ -16,155 +16,155 @@
 }
 
 @mixin buttonVariables {
-  --icon-size: var(--size-icon-ui-small);
-  --line-through-height-disabled: var(--border-width-2x);
+  --icon-size: var(--sbb-size-icon-ui-small);
+  --line-through-height-disabled: var(--sbb-border-width-2x);
 
   // we use primary button styles as default values
-  --color-active-background: var(--color-red150-default);
-  --color-active-border: var(--color-red150-default);
-  --color-active-text: var(--color-cloud-default);
-  --color-default-background: var(--color-red-default);
-  --color-default-border: var(--color-red-default);
-  --color-default-text: var(--color-white-default);
-  --color-disabled-background: var(--color-milk-default);
-  --color-disabled-border: var(--color-milk-default);
-  --color-disabled-text: var(--color-platinum-default);
-  --color-hover-background: var(--color-red125-default);
-  --color-hover-border: var(--color-red125-default);
-  --color-hover-text: var(--color-milk-default);
+  --color-active-background: var(--sbb-color-red150-default);
+  --color-active-border: var(--sbb-color-red150-default);
+  --color-active-text: var(--sbb-color-cloud-default);
+  --color-default-background: var(--sbb-color-red-default);
+  --color-default-border: var(--sbb-color-red-default);
+  --color-default-text: var(--sbb-color-white-default);
+  --color-disabled-background: var(--sbb-color-milk-default);
+  --color-disabled-border: var(--sbb-color-milk-default);
+  --color-disabled-text: var(--sbb-color-platinum-default);
+  --color-hover-background: var(--sbb-color-red125-default);
+  --color-hover-border: var(--sbb-color-red125-default);
+  --color-hover-text: var(--sbb-color-milk-default);
 
-  --border-width: var(--border-width-2x);
-  --border-radius: var(--border-radius-16x);
+  --border-width: var(--sbb-border-width-2x);
+  --border-radius: var(--sbb-border-radius-16x);
   --min-height: var(--size-form-element-l-min-height);
-  --transition-duration: var(--animation-duration-2x);
-  --transition-easing-function: var(--animation-easing);
-  --padding-block-min: var(--spacing-fixed-1x);
-  --padding-inline: var(--spacing-fixed-8x);
-  --gap: var(--spacing-fixed-2x);
+  --transition-duration: var(--sbb-animation-duration-2x);
+  --transition-easing-function: var(--sbb-animation-easing);
+  --padding-block-min: var(--sbb-spacing-fixed-1x);
+  --padding-inline: var(--sbb-spacing-fixed-8x);
+  --gap: var(--sbb-spacing-fixed-2x);
 
-  --shadow-1-default-color: var(--color-red-alpha-20);
-  --shadow-1-default-blur: 16;
-  --shadow-1-default-offset-x: 0;
-  --shadow-1-default-offset-y: 2;
-  --shadow-1-default-spread: 0;
-  --shadow-2-default-color: var(--color-red125-alpha-20);
-  --shadow-2-default-blur: 4;
-  --shadow-2-default-offset-x: 0;
-  --shadow-2-default-offset-y: 1;
-  --shadow-2-default-spread: 0;
+  --shadow-1-default-color: var(--sbb-color-red-alpha-20);
+  --shadow-1-default-blur: #{pxToRemBuild(16)};
+  --shadow-1-default-offset-x: #{pxToRemBuild(0)};
+  --shadow-1-default-offset-y: #{pxToRemBuild(2)};
+  --shadow-1-default-spread: #{pxToRemBuild(0)};
+  --shadow-2-default-color: var(--sbb-color-red125-alpha-20);
+  --shadow-2-default-blur: #{pxToRemBuild(4)};
+  --shadow-2-default-offset-x: #{pxToRemBuild(0)};
+  --shadow-2-default-offset-y: #{pxToRemBuild(1)};
+  --shadow-2-default-spread: #{pxToRemBuild(0)};
 
-  --shadow-1-hover-color: var(--color-red-alpha-20);
-  --shadow-1-hover-blur: 8;
-  --shadow-1-hover-offset-x: 0;
-  --shadow-1-hover-offset-y: 1;
-  --shadow-1-hover-spread: 0;
-  --shadow-2-hover-color: var(--color-red125-alpha-20);
-  --shadow-2-hover-blur: 2;
-  --shadow-2-hover-offset-x: 0;
-  --shadow-2-hover-offset-y: 1;
-  --shadow-2-hover-spread: 0;
+  --shadow-1-hover-color: var(--sbb-color-red-alpha-20);
+  --shadow-1-hover-blur: #{pxToRemBuild(8)};
+  --shadow-1-hover-offset-x: #{pxToRemBuild(0)};
+  --shadow-1-hover-offset-y: #{pxToRemBuild(1)};
+  --shadow-1-hover-spread: #{pxToRemBuild(0)};
+  --shadow-2-hover-color: var(--sbb-color-red125-alpha-20);
+  --shadow-2-hover-blur: #{pxToRemBuild(2)};
+  --shadow-2-hover-offset-x: #{pxToRemBuild(0)};
+  --shadow-2-hover-offset-y: #{pxToRemBuild(1)};
+  --shadow-2-hover-spread: #{pxToRemBuild(0)};
 
   @include mq($from: medium) {
-    --padding-inline: var(--spacing-fixed-10x);
+    --padding-inline: var(--sbb-spacing-fixed-10x);
   }
 }
 
 @mixin buttonPrimaryNegativeVariables {
-  --color-active-background: var(--color-cloud-default);
-  --color-active-border: var(--color-cloud-default);
-  --color-active-text: var(--color-red150-default);
-  --color-default-background: var(--color-white-default);
-  --color-default-border: var(--color-white-default);
-  --color-default-text: var(--color-red-default);
-  --color-disabled-background: var(--color-black-alpha-10);
-  --color-disabled-border: var(--color-black-alpha-0);
-  --color-disabled-text: var(--color-white-alpha-60);
-  --color-hover-background: var(--color-milk-default);
-  --color-hover-border: var(--color-milk-default);
-  --color-hover-text: var(--color-red125-default);
+  --color-active-background: var(--sbb-color-cloud-default);
+  --color-active-border: var(--sbb-color-cloud-default);
+  --color-active-text: var(--sbb-color-red150-default);
+  --color-default-background: var(--sbb-color-white-default);
+  --color-default-border: var(--sbb-color-white-default);
+  --color-default-text: var(--sbb-color-red-default);
+  --color-disabled-background: var(--sbb-color-black-alpha-10);
+  --color-disabled-border: var(--sbb-color-black-alpha-0);
+  --color-disabled-text: var(--sbb-color-white-alpha-60);
+  --color-hover-background: var(--sbb-color-milk-default);
+  --color-hover-border: var(--sbb-color-milk-default);
+  --color-hover-text: var(--sbb-color-red125-default);
 
-  --shadow-1-default-color: var(--color-smoke-alpha-20);
-  --shadow-1-default-blur: 16;
-  --shadow-1-default-offset-x: 0;
-  --shadow-1-default-offset-y: 2;
-  --shadow-1-default-spread: 0;
-  --shadow-2-default-color: var(--color-metal-alpha-20);
-  --shadow-2-default-blur: 4;
-  --shadow-2-default-offset-x: 0;
-  --shadow-2-default-offset-y: 1;
-  --shadow-2-default-spread: 0;
+  --shadow-1-default-color: var(--sbb-color-smoke-alpha-20);
+  --shadow-1-default-blur: #{pxToRemBuild(16)};
+  --shadow-1-default-offset-x: #{pxToRemBuild(0)};
+  --shadow-1-default-offset-y: #{pxToRemBuild(2)};
+  --shadow-1-default-spread: #{pxToRemBuild(0)};
+  --shadow-2-default-color: var(--sbb-color-metal-alpha-20);
+  --shadow-2-default-blur: #{pxToRemBuild(4)};
+  --shadow-2-default-offset-x: #{pxToRemBuild(0)};
+  --shadow-2-default-offset-y: #{pxToRemBuild(1)};
+  --shadow-2-default-spread: #{pxToRemBuild(0)};
 
-  --shadow-1-hover-color: var(--color-smoke-alpha-20);
-  --shadow-1-hover-blur: 16;
-  --shadow-1-hover-offset-x: 0;
-  --shadow-1-hover-offset-y: 2;
-  --shadow-1-hover-spread: 0;
-  --shadow-2-hover-color: var(--color-metal-alpha-20);
-  --shadow-2-hover-blur: 4;
-  --shadow-2-hover-offset-x: 0;
-  --shadow-2-hover-offset-y: 1;
-  --shadow-2-hover-spread: 0;
+  --shadow-1-hover-color: var(--sbb-color-smoke-alpha-20);
+  --shadow-1-hover-blur: #{pxToRemBuild(16)};
+  --shadow-1-hover-offset-x: #{pxToRemBuild(0)};
+  --shadow-1-hover-offset-y: #{pxToRemBuild(2)};
+  --shadow-1-hover-spread: #{pxToRemBuild(0)};
+  --shadow-2-hover-color: var(--sbb-color-metal-alpha-20);
+  --shadow-2-hover-blur: #{pxToRemBuild(4)};
+  --shadow-2-hover-offset-x: #{pxToRemBuild(0)};
+  --shadow-2-hover-offset-y: #{pxToRemBuild(1)};
+  --shadow-2-hover-spread: #{pxToRemBuild(0)};
 }
 
 @mixin buttonSecondaryVariables {
-  --color-active-background: var(--color-cloud-default);
-  --color-active-border: var(--color-cloud-default);
-  --color-active-text: var(--color-anthracite-default);
-  --color-default-background: var(--color-white-default);
-  --color-default-border: var(--color-cloud-default);
-  --color-default-text: var(--color-charcoal-default);
-  --color-disabled-background: var(--color-milk-default);
-  --color-disabled-border: var(--color-milk-default);
-  --color-disabled-text: var(--color-platinum-default);
-  --color-hover-background: var(--color-milk-default);
-  --color-hover-border: var(--color-cloud-default);
-  --color-hover-text: var(--color-iron-default);
+  --color-active-background: var(--sbb-color-cloud-default);
+  --color-active-border: var(--sbb-color-cloud-default);
+  --color-active-text: var(--sbb-color-anthracite-default);
+  --color-default-background: var(--sbb-color-white-default);
+  --color-default-border: var(--sbb-color-cloud-default);
+  --color-default-text: var(--sbb-color-charcoal-default);
+  --color-disabled-background: var(--sbb-color-milk-default);
+  --color-disabled-border: var(--sbb-color-milk-default);
+  --color-disabled-text: var(--sbb-color-platinum-default);
+  --color-hover-background: var(--sbb-color-milk-default);
+  --color-hover-border: var(--sbb-color-cloud-default);
+  --color-hover-text: var(--sbb-color-iron-default);
 
-  --shadow-1-default-color: var(--color-platinum-alpha-20);
-  --shadow-1-default-blur: 16;
-  --shadow-1-default-offset-x: 0;
-  --shadow-1-default-offset-y: 2;
-  --shadow-1-default-spread: 0;
-  --shadow-2-default-color: var(--color-cement-alpha-20);
-  --shadow-2-default-blur: 4;
-  --shadow-2-default-offset-x: 0;
-  --shadow-2-default-offset-y: 1;
-  --shadow-2-default-spread: 0;
+  --shadow-1-default-color: var(--sbb-color-platinum-alpha-20);
+  --shadow-1-default-blur: #{pxToRemBuild(16)};
+  --shadow-1-default-offset-x: #{pxToRemBuild(0)};
+  --shadow-1-default-offset-y: #{pxToRemBuild(2)};
+  --shadow-1-default-spread: #{pxToRemBuild(0)};
+  --shadow-2-default-color: var(--sbb-color-cement-alpha-20);
+  --shadow-2-default-blur: #{pxToRemBuild(4)};
+  --shadow-2-default-offset-x: #{pxToRemBuild(0)};
+  --shadow-2-default-offset-y: #{pxToRemBuild(1)};
+  --shadow-2-default-spread: #{pxToRemBuild(0)};
 
-  --shadow-1-hover-color: var(--color-platinum-alpha-20);
-  --shadow-1-hover-blur: 16;
-  --shadow-1-hover-offset-x: 0;
-  --shadow-1-hover-offset-y: 2;
-  --shadow-1-hover-spread: 0;
-  --shadow-2-hover-color: var(--color-cement-alpha-20);
-  --shadow-2-hover-blur: 4;
-  --shadow-2-hover-offset-x: 0;
-  --shadow-2-hover-offset-y: 1;
-  --shadow-2-hover-spread: 0;
+  --shadow-1-hover-color: var(--sbb-color-platinum-alpha-20);
+  --shadow-1-hover-blur: #{pxToRemBuild(16)};
+  --shadow-1-hover-offset-x: #{pxToRemBuild(0)};
+  --shadow-1-hover-offset-y: #{pxToRemBuild(2)};
+  --shadow-1-hover-spread: #{pxToRemBuild(0)};
+  --shadow-2-hover-color: var(--sbb-color-cement-alpha-20);
+  --shadow-2-hover-blur: #{pxToRemBuild(4)};
+  --shadow-2-hover-offset-x: #{pxToRemBuild(0)};
+  --shadow-2-hover-offset-y: #{pxToRemBuild(1)};
+  --shadow-2-hover-spread: #{pxToRemBuild(0)};
 }
 
 @mixin buttonSecondaryNegativeVariables {
   --color-active-background: transparent;
-  --color-active-border: var(--color-cloud-default);
-  --color-active-text: var(--color-cloud-default);
+  --color-active-border: var(--sbb-color-cloud-default);
+  --color-active-text: var(--sbb-color-cloud-default);
   --color-default-background: transparent;
-  --color-default-border: var(--color-white-default);
-  --color-default-text: var(--color-white-default);
-  --color-disabled-background: var(--color-black-alpha-10);
-  --color-disabled-border: var(--color-black-alpha-0);
-  --color-disabled-text: var(--color-aluminium-default);
+  --color-default-border: var(--sbb-color-white-default);
+  --color-default-text: var(--sbb-color-white-default);
+  --color-disabled-background: var(--sbb-color-black-alpha-10);
+  --color-disabled-border: var(--sbb-color-black-alpha-0);
+  --color-disabled-text: var(--sbb-color-aluminium-default);
   --color-hover-background: transparent;
-  --color-hover-border: var(--color-milk-default);
-  --color-hover-text: var(--color-milk-default);
+  --color-hover-border: var(--sbb-color-milk-default);
+  --color-hover-text: var(--sbb-color-milk-default);
 }
 
 @mixin buttonSizeMVariables {
-  --border-width: var(--border-width-1x);
+  --border-width: var(--sbb-border-width-1x);
   --min-height: var(--size-form-element-m-min-height);
-  --padding-inline: var(--spacing-fixed-5x);
+  --padding-inline: var(--sbb-spacing-fixed-5x);
 
   @include mq($from: medium) {
-    --padding-inline: var(--spacing-fixed-8x);
+    --padding-inline: var(--sbb-spacing-fixed-8x);
   }
 }
 
@@ -175,21 +175,21 @@
 
   position: relative;
   display: flex;
-  gap: pxToRem(var(--gap));
+  gap: var(--gap);
   align-items: center;
   justify-content: center;
   text-align: left;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-easing-function);
   transition-property: color;
-  min-height: pxToRem(var(--min-height));
-  border-radius: pxToRem(var(--border-radius));
+  min-height: var(--min-height);
+  border-radius: var(--border-radius);
 
   // The padding block value is only a minimal padding to preserve a padding if the content becomes larger than intended.
   // Positioning of the content is made by flexbox vertical centering.
   // The real padding displayed is larger than the defined value below.
-  padding-block: pxToRem(var(--padding-block-min));
-  padding-inline: pxToRem(var(--padding-inline));
+  padding-block: var(--padding-block-min);
+  padding-inline: var(--padding-inline);
   color: var(--color-default-text);
   -webkit-font-smoothing: antialiased;
   cursor: pointer;
@@ -199,8 +199,8 @@
     position: absolute;
     content: '';
     inset: 0;
-    border: pxToRem(var(--border-width)) solid var(--color-default-border);
-    border-radius: pxToRem(var(--border-radius));
+    border: var(--border-width) solid var(--color-default-border);
+    border-radius: var(--border-radius);
     background-color: var(--color-default-background);
 
     transition-duration: var(--transition-duration);
@@ -208,7 +208,7 @@
     transition-property: inset, background-color, border-color, box-shadow;
 
     @include ifForcedColors {
-      border: pxToRem(1) solid windowText;
+      border: #{pxToRemBuild(1)} solid windowText;
     }
   }
 
@@ -219,12 +219,10 @@
 
 @mixin buttonShadowNotDisabled {
   &::before {
-    box-shadow: pxToRem(var(--shadow-1-default-offset-x)) pxToRem(var(--shadow-1-default-offset-y))
-        pxToRem(var(--shadow-1-default-blur)) pxToRem(var(--shadow-1-default-spread))
-        var(--shadow-1-default-color),
-      pxToRem(var(--shadow-2-default-offset-x)) pxToRem(var(--shadow-2-default-offset-y))
-        pxToRem(var(--shadow-2-default-blur)) pxToRem(var(--shadow-2-default-spread))
-        var(--shadow-2-default-color);
+    box-shadow: var(--shadow-1-default-offset-x) var(--shadow-1-default-offset-y)
+        var(--shadow-1-default-blur) var(--shadow-1-default-spread) var(--shadow-1-default-color),
+      var(--shadow-2-default-offset-x) var(--shadow-2-default-offset-y) var(--shadow-2-default-blur)
+        var(--shadow-2-default-spread) var(--shadow-2-default-color);
   }
 }
 
@@ -242,21 +240,19 @@
 }
 
 @mixin buttonHover {
-  --translate-y-content-hover: -1;
+  --translate-y-content-hover: #{pxToRemBuild(-1)};
 
   color: var(--color-hover-text);
 
   &::before {
-    inset: pxToRem(var(--border-width), true);
+    inset: calc(var(--border-width) * -1);
 
     background-color: var(--color-hover-background);
     border-color: var(--color-hover-border);
-    box-shadow: pxToRem(var(--shadow-1-hover-offset-x)) pxToRem(var(--shadow-1-hover-offset-y))
-        pxToRem(var(--shadow-1-hover-blur)) pxToRem(var(--shadow-1-hover-spread))
-        var(--shadow-1-hover-color),
-      pxToRem(var(--shadow-2-hover-offset-x)) pxToRem(var(--shadow-2-hover-offset-y))
-        pxToRem(var(--shadow-2-hover-blur)) pxToRem(var(--shadow-2-hover-spread))
-        var(--shadow-2-hover-color);
+    box-shadow: var(--shadow-1-hover-offset-x) var(--shadow-1-hover-offset-y)
+        var(--shadow-1-hover-blur) var(--shadow-1-hover-spread) var(--shadow-1-hover-color),
+      var(--shadow-2-hover-offset-x) var(--shadow-2-hover-offset-y) var(--shadow-2-hover-blur)
+        var(--shadow-2-hover-spread) var(--shadow-2-hover-color);
 
     @include ifForcedColors {
       border-color: Highlight;
@@ -274,7 +270,7 @@
 
 @mixin buttonLabelTransition {
   transition: transform var(--transition-duration) var(--transition-easing-function);
-  transform: translateY(#{pxToRem(var(--translate-y-content-hover, 0))});
+  transform: translateY(var(--translate-y-content-hover, #{pxToRemBuild(0)}));
 }
 
 @mixin buttonLabel {
@@ -284,7 +280,7 @@
 
 @mixin buttonIcon {
   display: block;
-  width: pxToRem(var(--icon-size));
-  height: pxToRem(var(--icon-size));
+  width: var(--icon-size);
+  height: var(--icon-size);
   color: currentColor;
 }
