--- a/src/global/mixins/mixins_spacing.scss
+++ b/src/global/mixins/mixins_spacing.scss
@@ -1,11 +1,11 @@
 @mixin page-spacing() {
-  padding-inline-start: pxToRem(var(--page-base-offset-responsive));
-  padding-inline-end: pxToRem(var(--page-base-offset-responsive));
+  padding-inline-start: var(--page-base-offset-responsive);
+  padding-inline-end: var(--page-base-offset-responsive);
 }
 
 @mixin page-spacing__inner() {
   @include mq($from: wide) {
-    width: calc(pxToRem($breakpoint-wide-min) - (2 * pxToRem(var(--page-base-offset-responsive))));
+    width: calc(#{$sbb-breakpoint-wide-min} - (2 * var(--page-base-offset-responsive)));
     margin-inline-start: auto;
     margin-inline-end: auto;
   }
@@ -13,7 +13,7 @@
 
 @mixin page-spacing--ultra-plus__inner() {
   @include mq($from: ultra) {
-    width: pxToRem($breakpoint-ultra-min);
+    width: $sbb-breakpoint-ultra-min;
     margin-inline-start: auto;
     margin-inline-end: auto;
   }
