chore: update prettier formatting

--- a/src/components/sbb-timetable-barrier-free/styles/sbb-timetable-barrier-free.component.scss
+++ b/src/components/sbb-timetable-barrier-free/styles/sbb-timetable-barrier-free.component.scss
@@ -5,7 +5,9 @@
 
 :host {
   --barrier-free-icon-size: #{pxToRemBuild(24)};
-  --barrier-free-icon-padding-inline-start: calc(var(--barrier-free-icon-size) + var(--sbb-spacing-fixed-1x));
+  --barrier-free-icon-padding-inline-start: calc(
+    var(--barrier-free-icon-size) + var(--sbb-spacing-fixed-1x)
+  );
 }
 
 .barrier-free {
