--- a/src/global/mixins/mixins_buttons.scss
+++ b/src/global/mixins/mixins_buttons.scss
@@ -35,7 +35,7 @@
 
   --border-width: var(--sbb-border-width-2x);
   --border-radius: var(--sbb-border-radius-16x);
-  --min-height: var(--size-form-element-l-min-height);
+  --min-height: var(--sbb-size-form-element-l-min-height);
   --transition-duration: var(--sbb-animation-duration-2x);
   --transition-easing-function: var(--sbb-animation-easing);
   --padding-block-min: var(--sbb-spacing-fixed-1x);
@@ -43,26 +43,26 @@
   --gap: var(--sbb-spacing-fixed-2x);
 
   --shadow-1-default-color: var(--sbb-color-red-alpha-20);
-  --shadow-1-default-blur: #{pxToRemBuild(16)};
-  --shadow-1-default-offset-x: #{pxToRemBuild(0)};
-  --shadow-1-default-offset-y: #{pxToRemBuild(2)};
-  --shadow-1-default-spread: #{pxToRemBuild(0)};
+  --shadow-1-default-blur: var(--sbb-shadow-elevation-level-3-shadow-1-blur);
+  --shadow-1-default-offset-x: var(--sbb-shadow-elevation-level-3-shadow-1-offset-x);
+  --shadow-1-default-offset-y: var(--sbb-shadow-elevation-level-3-shadow-1-offset-y);
+  --shadow-1-default-spread: var(--sbb-shadow-elevation-level-3-shadow-1-spread);
   --shadow-2-default-color: var(--sbb-color-red125-alpha-20);
-  --shadow-2-default-blur: #{pxToRemBuild(4)};
-  --shadow-2-default-offset-x: #{pxToRemBuild(0)};
-  --shadow-2-default-offset-y: #{pxToRemBuild(1)};
-  --shadow-2-default-spread: #{pxToRemBuild(0)};
+  --shadow-2-default-blur: var(--sbb-shadow-elevation-level-3-shadow-2-blur);
+  --shadow-2-default-offset-x: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x);
+  --shadow-2-default-offset-y: var(--sbb-shadow-elevation-level-3-shadow-2-offset-y);
+  --shadow-2-default-spread: var(--sbb-shadow-elevation-level-3-shadow-2-spread);
 
   --shadow-1-hover-color: var(--sbb-color-red-alpha-20);
-  --shadow-1-hover-blur: #{pxToRemBuild(8)};
-  --shadow-1-hover-offset-x: #{pxToRemBuild(0)};
-  --shadow-1-hover-offset-y: #{pxToRemBuild(1)};
-  --shadow-1-hover-spread: #{pxToRemBuild(0)};
+  --shadow-1-hover-blur: calc(var(--sbb-shadow-elevation-level-3-shadow-1-blur) * 0.5);
+  --shadow-1-hover-offset-x: var(--sbb-shadow-elevation-level-3-shadow-1-offset-x);
+  --shadow-1-hover-offset-y: calc(var(--sbb-shadow-elevation-level-3-shadow-1-offset-y) * 0.5);
+  --shadow-1-hover-spread: var(--sbb-shadow-elevation-level-3-shadow-1-spread);
   --shadow-2-hover-color: var(--sbb-color-red125-alpha-20);
-  --shadow-2-hover-blur: #{pxToRemBuild(2)};
-  --shadow-2-hover-offset-x: #{pxToRemBuild(0)};
-  --shadow-2-hover-offset-y: #{pxToRemBuild(1)};
-  --shadow-2-hover-spread: #{pxToRemBuild(0)};
+  --shadow-2-hover-blur: calc(var(--sbb-shadow-elevation-level-3-shadow-2-blur) * 0.5);
+  --shadow-2-hover-offset-x: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x);
+  --shadow-2-hover-offset-y: var(--sbb-shadow-elevation-level-3-shadow-2-offset-y);
+  --shadow-2-hover-spread: var(--sbb-shadow-elevation-level-3-shadow-2-spread);
 
   @include mq($from: medium) {
     --padding-inline: var(--sbb-spacing-fixed-10x);
@@ -84,26 +84,26 @@
   --color-hover-text: var(--sbb-color-red125-default);
 
   --shadow-1-default-color: var(--sbb-color-smoke-alpha-20);
-  --shadow-1-default-blur: #{pxToRemBuild(16)};
-  --shadow-1-default-offset-x: #{pxToRemBuild(0)};
-  --shadow-1-default-offset-y: #{pxToRemBuild(2)};
-  --shadow-1-default-spread: #{pxToRemBuild(0)};
+  --shadow-1-default-blur: var(--sbb-shadow-elevation-level-3-shadow-1-blur);
+  --shadow-1-default-offset-x: var(--sbb-shadow-elevation-level-3-shadow-1-offset-x);
+  --shadow-1-default-offset-y: var(--sbb-shadow-elevation-level-3-shadow-1-offset-y);
+  --shadow-1-default-spread: var(--sbb-shadow-elevation-level-3-shadow-1-spread);
   --shadow-2-default-color: var(--sbb-color-metal-alpha-20);
-  --shadow-2-default-blur: #{pxToRemBuild(4)};
-  --shadow-2-default-offset-x: #{pxToRemBuild(0)};
-  --shadow-2-default-offset-y: #{pxToRemBuild(1)};
-  --shadow-2-default-spread: #{pxToRemBuild(0)};
+  --shadow-2-default-blur: var(--sbb-shadow-elevation-level-3-shadow-2-blur);
+  --shadow-2-default-offset-x: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x);
+  --shadow-2-default-offset-y: var(--sbb-shadow-elevation-level-3-shadow-2-offset-y);
+  --shadow-2-default-spread: var(--sbb-shadow-elevation-level-3-shadow-2-spread);
 
   --shadow-1-hover-color: var(--sbb-color-smoke-alpha-20);
-  --shadow-1-hover-blur: #{pxToRemBuild(16)};
-  --shadow-1-hover-offset-x: #{pxToRemBuild(0)};
-  --shadow-1-hover-offset-y: #{pxToRemBuild(2)};
-  --shadow-1-hover-spread: #{pxToRemBuild(0)};
+  --shadow-1-hover-blur: calc(var(--sbb-shadow-elevation-level-3-shadow-1-blur) * 0.5);
+  --shadow-1-hover-offset-x: var(--sbb-shadow-elevation-level-3-shadow-1-offset-x);
+  --shadow-1-hover-offset-y: calc(var(--sbb-shadow-elevation-level-3-shadow-1-offset-y) * 0.5);
+  --shadow-1-hover-spread: var(--sbb-shadow-elevation-level-3-shadow-1-spread);
   --shadow-2-hover-color: var(--sbb-color-metal-alpha-20);
-  --shadow-2-hover-blur: #{pxToRemBuild(4)};
-  --shadow-2-hover-offset-x: #{pxToRemBuild(0)};
-  --shadow-2-hover-offset-y: #{pxToRemBuild(1)};
-  --shadow-2-hover-spread: #{pxToRemBuild(0)};
+  --shadow-2-hover-blur: calc(var(--sbb-shadow-elevation-level-3-shadow-2-blur) * 0.5);
+  --shadow-2-hover-offset-x: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x);
+  --shadow-2-hover-offset-y: var(--sbb-shadow-elevation-level-3-shadow-2-offset-y);
+  --shadow-2-hover-spread: var(--sbb-shadow-elevation-level-3-shadow-2-spread);
 }
 
 @mixin buttonSecondaryVariables {
@@ -121,26 +121,26 @@
   --color-hover-text: var(--sbb-color-iron-default);
 
   --shadow-1-default-color: var(--sbb-color-platinum-alpha-20);
-  --shadow-1-default-blur: #{pxToRemBuild(16)};
-  --shadow-1-default-offset-x: #{pxToRemBuild(0)};
-  --shadow-1-default-offset-y: #{pxToRemBuild(2)};
-  --shadow-1-default-spread: #{pxToRemBuild(0)};
+  --shadow-1-default-blur: var(--sbb-shadow-elevation-level-3-shadow-1-blur);
+  --shadow-1-default-offset-x: var(--sbb-shadow-elevation-level-3-shadow-1-offset-x);
+  --shadow-1-default-offset-y: var(--sbb-shadow-elevation-level-3-shadow-1-offset-y);
+  --shadow-1-default-spread: var(--sbb-shadow-elevation-level-3-shadow-1-spread);
   --shadow-2-default-color: var(--sbb-color-cement-alpha-20);
-  --shadow-2-default-blur: #{pxToRemBuild(4)};
-  --shadow-2-default-offset-x: #{pxToRemBuild(0)};
-  --shadow-2-default-offset-y: #{pxToRemBuild(1)};
-  --shadow-2-default-spread: #{pxToRemBuild(0)};
+  --shadow-2-default-blur: var(--sbb-shadow-elevation-level-3-shadow-2-blur);
+  --shadow-2-default-offset-x: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x);
+  --shadow-2-default-offset-y: var(--sbb-shadow-elevation-level-3-shadow-2-offset-y);
+  --shadow-2-default-spread: var(--sbb-shadow-elevation-level-3-shadow-2-spread);
 
   --shadow-1-hover-color: var(--sbb-color-platinum-alpha-20);
-  --shadow-1-hover-blur: #{pxToRemBuild(16)};
-  --shadow-1-hover-offset-x: #{pxToRemBuild(0)};
-  --shadow-1-hover-offset-y: #{pxToRemBuild(2)};
-  --shadow-1-hover-spread: #{pxToRemBuild(0)};
+  --shadow-1-hover-blur: calc(var(--sbb-shadow-elevation-level-3-shadow-1-blur) * 0.5);
+  --shadow-1-hover-offset-x: var(--sbb-shadow-elevation-level-3-shadow-1-offset-x);
+  --shadow-1-hover-offset-y: calc(var(--sbb-shadow-elevation-level-3-shadow-1-offset-y) * 0.5);
+  --shadow-1-hover-spread: var(--sbb-shadow-elevation-level-3-shadow-1-spread);
   --shadow-2-hover-color: var(--sbb-color-cement-alpha-20);
-  --shadow-2-hover-blur: #{pxToRemBuild(4)};
-  --shadow-2-hover-offset-x: #{pxToRemBuild(0)};
-  --shadow-2-hover-offset-y: #{pxToRemBuild(1)};
-  --shadow-2-hover-spread: #{pxToRemBuild(0)};
+  --shadow-2-hover-blur: calc(var(--sbb-shadow-elevation-level-3-shadow-2-blur) * 0.5);
+  --shadow-2-hover-offset-x: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x);
+  --shadow-2-hover-offset-y: var(--sbb-shadow-elevation-level-3-shadow-2-offset-y);
+  --shadow-2-hover-spread: var(--sbb-shadow-elevation-level-3-shadow-2-spread);
 }
 
 @mixin buttonSecondaryNegativeVariables {
@@ -160,7 +160,7 @@
 
 @mixin buttonSizeMVariables {
   --border-width: var(--sbb-border-width-1x);
-  --min-height: var(--size-form-element-m-min-height);
+  --min-height: var(--sbb-size-form-element-m-min-height);
   --padding-inline: var(--sbb-spacing-fixed-5x);
 
   @include mq($from: medium) {
