--- a/src/global/mixins/mixins_typo.scss
+++ b/src/global/mixins/mixins_typo.scss
@@ -12,33 +12,33 @@
 
 @mixin title-1 {
   @include title();
-  font-size: var(--lyne-font-size-title-1);
+  font-size: var(--sbb-font-size-title-1);
 }
 
 @mixin title-2 {
   @include title();
-  font-size: var(--lyne-font-size-title-2);
+  font-size: var(--sbb-font-size-title-2);
 }
 
 @mixin title-3 {
   @include title();
-  font-size: var(--lyne-font-size-title-3);
+  font-size: var(--sbb-font-size-title-3);
 }
 
 @mixin title-4 {
   @include title();
-  font-size: var(--lyne-font-size-title-4);
+  font-size: var(--sbb-font-size-title-4);
 }
 
 @mixin title-5 {
   @include title();
-  font-size: var(--lyne-font-size-title-5);
+  font-size: var(--sbb-font-size-title-5);
   line-height: var(--sbb-typo-line-height-body-text);
 }
 
 @mixin title-6 {
   @include title();
-  font-size: var(--lyne-font-size-title-6);
+  font-size: var(--sbb-font-size-title-6);
   line-height: var(--sbb-typo-line-height-body-text);
 }
 
@@ -62,7 +62,7 @@
 
 @mixin text-xl--regular {
   @include text();
-  font-size: var(--lyne-font-size-text-xl);
+  font-size: var(--sbb-font-size-text-xl);
 }
 
 @mixin text-xl--bold {
@@ -72,7 +72,7 @@
 
 @mixin text-m--regular {
   @include text();
-  font-size: var(--lyne-font-size-text-m);
+  font-size: var(--sbb-font-size-text-m);
 }
 
 @mixin text-m--bold {
@@ -82,7 +82,7 @@
 
 @mixin text-s--regular {
   @include text();
-  font-size: var(--lyne-font-size-text-s);
+  font-size: var(--sbb-font-size-text-s);
 }
 
 @mixin text-s--bold {
@@ -92,7 +92,7 @@
 
 @mixin text-xs--regular {
   @include text();
-  font-size: var(--lyne-font-size-text-xs);
+  font-size: var(--sbb-font-size-text-xs);
 }
 
 @mixin text-xs--bold {
@@ -102,7 +102,7 @@
 
 @mixin text-xxs--regular {
   @include text();
-  font-size: var(--lyne-font-size-text-xxs);
+  font-size: var(--sbb-font-size-text-xxs);
 }
 
 @mixin text-xxs--bold {
