refactor: applied prettier

--- a/src/components/sbb-form-error/styles/sbb-form-error.shared.scss
+++ b/src/components/sbb-form-error/styles/sbb-form-error.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "./sbb-form-error.component.scss";
+@import './sbb-form-error.component.scss';
 
 // Mode overrides/tests
 // :host {
