feat: add prefix to css vars

--- a/src/components/sbb-teaser/styles/sbb-teaser.default.scss
+++ b/src/components/sbb-teaser/styles/sbb-teaser.default.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import globally defined styles for single component usage, if in shared mode, these styles are imported globally and shared over all components
-@import "./../../../global/global.default.scss";
+@import './../../../global/global.default.scss';
 
 // Import component styles
-@import "./sbb-teaser.component.scss";
+@import './sbb-teaser.component.scss';
