--- a/src/components/sbb-teaser/styles/sbb-teaser.component.scss
+++ b/src/components/sbb-teaser/styles/sbb-teaser.component.scss
@@ -3,7 +3,7 @@
 }
 
 :host {
-  --hover-scale: 1.02;
+  --sbb-hover-scale: 1.02;
 }
 
 /* ************************************************* */
@@ -15,23 +15,23 @@
   text-align: start;
 
   &:hover {
-    ::slotted( [slot="image"] ) {
+    ::slotted([slot='image']) {
       @include shadow-level-9-hard;
-      transform: scale(var(--hover-scale));
+      transform: scale(var(--sbb-hover-scale));
     }
   }
 }
 
-::slotted( [slot="image"] ) {
+::slotted([slot='image']) {
   @include image-aspect-ratio-4-3;
   display: block;
   object-fit: cover;
-  border-radius: pxToRem(var(--border-radius-4x));
+  border-radius: var(--sbb-border-radius-4x);
   width: 100%;
-  transition: var(--animation-duration-4x) var(--animation-easing);
+  transition: var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
 }
 
-.teaser__inner { 
+.teaser__inner {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
@@ -39,7 +39,7 @@
 
 .teaser__wrapper {
   width: 100%;
-  margin-inline-end: pxToRem(var(--spacing-fixed-4x));
+  margin-inline-end: var(--sbb-spacing-fixed-4x);
   margin-block-end: 0;
 }
 
@@ -61,7 +61,7 @@
 .teaser__wrapper {
   .teaser--is-stacked & {
     margin-inline-end: 0;
-    margin-block-end: pxToRem(var(--spacing-fixed-3x));
+    margin-block-end: var(--sbb-spacing-fixed-3x);
   }
 }
 
@@ -71,21 +71,21 @@
 
 .teaser__description {
   .teaser--primary-negative & {
-    color: var(--color-black-default);
+    color: var(--sbb-color-black-default);
   }
 }
 
 .teaser__lead {
-  @include clampLines($lines:2);
+  @include clampLines($lines: 2);
 }
 
 .teaser__description {
   @include text-s--regular();
-  @include clampLines($lines:2);
-  color: var(--color-metal-default);
+  @include clampLines($lines: 2);
+  color: var(--sbb-color-metal-default);
 }
 
-::slotted( [slot="description"] ) {
+::slotted([slot='description']) {
   margin-block-start: 0;
   margin-block-end: 0;
 }
