--- a/src/components/sbb-teaser/styles/sbb-teaser.shared.scss
+++ b/src/components/sbb-teaser/styles/sbb-teaser.shared.scss
@@ -13,4 +13,4 @@
 //*****************************************************************************
 
 // Import component styles
-@import "./sbb-teaser.component.scss";
+@import './sbb-teaser.component.scss';
