--- a/src/components/sbb-panel/sbb-panel.scss
+++ b/src/components/sbb-panel/sbb-panel.scss
@@ -4,10 +4,10 @@
 
 :host {
   --panel-opacity: 0.9;
-  --panel-padding-inline: var(--spacing-responsive-m-small);
-  --panel-padding-block: var(--spacing-responsive-s-small);
-  --background-color: var(--color-red-default);
-  --text-margin-block-end: var(--spacing-fixed-6x);
+  --panel-padding-inline: var(--sbb-spacing-responsive-m-small);
+  --panel-padding-block: var(--sbb-spacing-responsive-s-small);
+  --background-color: var(--sbb-color-red-default);
+  --text-margin-block-end: var(--sbb-spacing-fixed-6x);
 
   // TODO: missing design tokens
   --panel-width: #{px-to-rem-build(223)};
@@ -15,8 +15,8 @@
   --triangle-height: #{px-to-rem-build(33)};
 
   @include mq($from: medium) {
-    --panel-padding-inline: var(--spacing-responsive-m-medium);
-    --panel-padding-block: var(--spacing-responsive-s-medium);
+    --panel-padding-inline: var(--sbb-spacing-responsive-m-medium);
+    --panel-padding-block: var(--sbb-spacing-responsive-s-medium);
 
     // TODO: missing design tokens
     --panel-width: #{px-to-rem-build(321)};
@@ -25,8 +25,8 @@
   }
 
   @include mq($from: large) {
-    --panel-padding-inline: var(--spacing-responsive-m-wide);
-    --panel-padding-block: var(--spacing-responsive-s-wide);
+    --panel-padding-inline: var(--sbb-spacing-responsive-m-wide);
+    --panel-padding-block: var(--sbb-spacing-responsive-s-wide);
 
     // TODO: missing design tokens
     --panel-width: #{px-to-rem-build(428)};
@@ -83,9 +83,9 @@
   border-block-start: var(--triangle-height) solid var(--background-color);
 }
 
-::slotted( [slot="text"] ) {
+::slotted([slot='text']) {
   @include text-xxl--regular();
-  color: var(--color-white-default);
+  color: var(--sbb-color-white-default);
   margin-block-start: 0;
   margin-block-end: var(--text-margin-block-end);
 }
