feat: change anchor to sbb-link for link action

--- a/src/components/sbb-link/styles/sbb-link.component.scss
+++ b/src/components/sbb-link/styles/sbb-link.component.scss
@@ -22,7 +22,8 @@
   gap: var(--sbb-spacing-fixed-1x);
   color: var(--text-color-normal);
   text-decoration: none;
-  word-break: break-word;
+
+  // word-break: break-word; // FIXME
   fill: currentcolor;
 
   &:focus-visible {
